--- a/apps/front/index.html
+++ b/apps/front/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio Maxime Leriche" />
-    <title>front</title>
+    <title>Maxime Leriche - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
