--- a/apps/front/index.html
+++ b/apps/front/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="MaxLeriche" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Maxime Leriche - Portfolio</title>
   </head>
   <body>
