--- a/apps/front/index.html
+++ b/apps/front/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,6 +11,13 @@
     <meta name="apple-mobile-web-app-title" content="MaxLeriche" />
     <link rel="manifest" href="/manifest.json" />
     <title>Maxime Leriche - Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
+    <link
+      rel="stylesheet"
+      as="style"
+      onload="this.rel='stylesheet'"
+      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Space+Grotesk%3Awght%40400%3B500%3B700"
+    />
   </head>
   <body>
     <div id="root"></div>
